MD written, title changed, parsivald somewhat roverworked

--- a/datastructures.tex
+++ b/datastructures.tex
@@ -1,6 +1,7 @@
 \section{Effiziente Datenstrukturen für räumliche Positionen}
 
 \todo{proofread and declutter whole section}
+\todo{subsubsections}
 Um große Simulationsräume mit vielen Millionen Atomen verwalten zu können, ist es offensichtlich nicht sinnvoll, alle Atome in einer Liste halten zu wollen.
 Statt dessen muss man verfügbare Datenstrukturen auf ihre Leistung hinsichtlich der notwendigen Operationen betrachten.
 Diese Operationen werden durch die Erfassung und Manipulation atomarer Positionen notwendig:
