--- a/metadaten.tex
+++ b/metadaten.tex
@@ -6,7 +6,7 @@
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-\newcommand{\dctitle}{Simulation von Oberflächenabscheidungsreaktionen?}
+\newcommand{\dctitle}{Gasphasenoberflächenabscheidungsreaktionsmolekulardynamiksimulationen!}
 \newcommand{\dcsubtitle}{~} % Untertitel, falls erforderlich
 
 \newcommand{\dcauthortitle}{B.Sc.}
