Font changed to Times or something

--- a/packages.tex
+++ b/packages.tex
@@ -39,3 +39,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{transparent}
+
+% Times New
+\usepackage{newtxtext}
+\usepackage{newtxmath}
